# tools-vmware-vra-cli

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  404.html  DEMO_SETUP.md  DEPLOYMENT_DETAIL_VIEW.md  Dockerfile  GENERIC_CATALOG_PROPOSAL.md  GENERIC_CATALOG_USAGE.md  IMPLEMENTATION_SETUP.md  LICENSE  README.md  REPORTS_UPDATE_SUMMARY.md  Taskfile.yml  docker-compose.airgap.yml  docker-compose.override.yml  docker-compose.yml  index.html  main.py  mitigation.md  mkdocs.yml  pyproject.toml  sitemap.xml  test_coverage_report.md  test_generic_catalog.py
.github/workflows/: build_and_publish.yml
.warp/: ai-preset.md
architecture-design/: index.html
architecture-design/architecture-overview/: index.html
architecture-design/components-model/: index.html
architecture-design/context-diagram/: index.html
architecture-design/data-models/: index.html
architecture-design/functional-requirements/: index.html
architecture-design/non-functional-requirements/: index.html
architecture-design/security-compliance/: index.html
archive/demo-scripts/: FINAL_DEMONSTRATION.py  demo_implementation.py
changelog/: index.html
developer-guide/architecture/: index.html
developer-guide/contributing/: index.html
docs/: build-deploy.md  changelog.md  compatibility-matrix.md  index.md  mcp-server-docker.md  mcp-server.md  migration-guide.md  references.md  rest-api-comprehensive.md  rest-api-server-docker.md  rest-api-server.md  vsphere-machine-api-endpoints.md
docs/architecture-design/: README.md  architecture-overview.md  components-model.md  context-diagram.md  data-models.md  functional-requirements.md  index.md  non-functional-requirements.md  presentation.html  security-compliance.md
examples/: README.md  claude_desktop_config.json  continue_config.json  mcp_client_example.py  mcp_client_examples.py
frontend/: .dockerignore  Dockerfile  README.md  index.html  jest.config.js  nginx.conf  package.json  tsconfig.json  tsconfig.prod.json  vite.config.ts
inputs/: 2020-08-25.json  openapi.yaml
output/: openapi.json
references/: index.html
scripts/: README.md  build.sh  create_labels.sh  install-tools.ps1  install-tools.sh  install_mcp_server.sh
search/: search_index.json
tests/: __init__.py  test_auth.py  test_catalog_api.py  test_config.py  test_mcp_server.py  test_server.py  test_simplified_cli.py
(+178 files in other folders)
